# GPGMP

./: .gitignore  CMakeLists.txt  CMakeLists.txt.executable  CMakePresets.json  README.md  bulk-rename.py  ninja-build.py
src/: Definitions.cuh  DeviceCommon.cuh  gpgmp-gmp.cuh  gpgmp-impl-impl.cu  gpgmp-impl.cuh  gpgmp.cuh  longlong.cuh  main.cu  main_dev_testing_pit.cu  pch.cu
src/GPGMP/: Definitions.cuh  DeviceCommon.cuh  config.cuh  gpgmp-gmp.cuh  gpgmp-impl-impl.cu  gpgmp-impl.cuh  gpgmp.cuh  longlong.cuh
src/GPGMP/extra/: errno.cu  extract-dbl.cu  invalid.cu
src/GPGMP/mpf/: Allocation.cuh  CopyArrayToArray.cuh  CopyToMPFArray.cuh  Free.cuh  Init.cuh  MPFItchRoutines.cuh  PredictSizes.cuh  mpf.cuh
src/GPGMP/mpf/MPFArrayRoutines/: abs.cu  add.cu  add_ui.cu  ceilfloor.cu  cmp.cu  cmp_d.cu  cmp_si.cu  cmp_ui.cu  cmp_z.cu  div.cu  div_2exp.cu  div_ui.cu  dump.cu  eq.cu  fits_sint.cu  fits_slong.cu  fits_sshort.cu  fits_uint.cu  fits_ulong.cu  fits_ushort.cu  get_d.cu  get_d_2exp.cu  get_prc.cu  get_si.cu  get_str.cu  get_ui.cu  inp_str.cu  int_p.cu  mul.cu  mul_2exp.cu  mul_ui.cu  neg.cu  out_str.cu  pow_ui.cu  random2.cu  reldiff.cu  set.cu  set_d.cu  set_q.cu  set_si.cu  (+13 more)
src/GPGMP/mpf/MPFRoutines/: abs.cu  add.cu  add_ui.cu  ceilfloor.cu  clear.cu  clears.cu  cmp.cu  cmp_d.cu  cmp_si.cu  cmp_ui.cu  cmp_z.cu  div.cu  div_2exp.cu  div_ui.cu  dump.cu  eq.cu  fits_sint.cu  fits_slong.cu  fits_sshort.cu  fits_uint.cu  fits_ulong.cu  fits_ushort.cu  get_d.cu  get_d_2exp.cu  get_dfl_prec.cu  get_prc.cu  get_si.cu  get_str.cu  get_ui.cu  init.cu  init2.cu  inits.cu  inp_str.cu  int_p.cu  iset.cu  iset_d.cu  iset_si.cu  iset_str.cu  iset_ui.cu  mul.cu  (+27 more)
src/GPGMP/mpn/: Allocation.cuh  CopyArrayToArray.cuh  CopyToMPZArray.cuh  Free.cuh  Init.cuh  MPNItchRoutines.cuh  PredictSizes.cuh  mpn.cuh
src/GPGMP/mpn/MPNRoutines/: add.cu  add_1.cu  add_err1_n.cu  add_err2_n.cu  add_err3_n.cu  add_n.cu  add_n_sub_n.cu  addmul_1.cu  bdiv_dbm1c.cu  bdiv_q.cu  bdiv_q_1.cu  bdiv_qr.cu  binvert.cu  broot.cu  brootinv.cu  bsqrt.cu  bsqrtinv.cu  cmp.cu  cnd_add_n.cu  cnd_sub_n.cu  cnd_swap.cu  com.cu  copyd.cu  (+166 more)
src/GPGMP/rand/: randmt.cu  randmt.cuh
src/extra/: errno.cu  extract-dbl.cu  invalid.cu
src/mpf/: Allocation.cuh  CopyArrayToArray.cuh  CopyToMPFArray.cuh  Free.cuh  Init.cuh  MPFItchRoutines.cuh  PredictSizes.cuh  mpf.cuh
src/mpf/MPFArrayRoutines/: abs.cu  add.cu  add_ui.cu  ceilfloor.cu  cmp.cu  cmp_d.cu  cmp_si.cu  cmp_ui.cu  cmp_z.cu  div.cu  div_2exp.cu  div_ui.cu  dump.cu  eq.cu  fits_sint.cu  fits_slong.cu  fits_sshort.cu  fits_uint.cu  fits_ulong.cu  fits_ushort.cu  get_d.cu  get_d_2exp.cu  get_prc.cu  get_si.cu  get_str.cu  get_ui.cu  inp_str.cu  int_p.cu  mul.cu  mul_2exp.cu  mul_ui.cu  neg.cu  out_str.cu  pow_ui.cu  random2.cu  reldiff.cu  set.cu  set_d.cu  set_q.cu  set_si.cu  (+13 more)
src/mpf/MPFRoutines/: abs.cu  add.cu  add_ui.cu  ceilfloor.cu  clear.cu  clears.cu  cmp.cu  cmp_d.cu  cmp_si.cu  cmp_ui.cu  cmp_z.cu  div.cu  div_2exp.cu  div_ui.cu  dump.cu  eq.cu  fits_sint.cu  fits_slong.cu  fits_sshort.cu  fits_uint.cu  fits_ulong.cu  fits_ushort.cu  get_d.cu  get_d_2exp.cu  get_dfl_prec.cu  get_prc.cu  get_si.cu  get_str.cu  get_ui.cu  init.cu  init2.cu  inits.cu  inp_str.cu  int_p.cu  iset.cu  iset_d.cu  iset_si.cu  iset_str.cu  iset_ui.cu  mul.cu  (+27 more)
src/mpn/: Allocation.cuh  CopyArrayToArray.cuh  CopyToMPZArray.cuh  Free.cuh  Init.cuh  MPNItchRoutines.cuh  PredictSizes.cuh  mpn.cuh
src/mpn/MPNRoutines/: add.cu  add_1.cu  add_1.cuh  add_err1_n.cu  add_err1_n.cuh  add_err2_n.cu  add_err3_n.cu  add_n.cu  add_n_sub_n.cu  addmul_1.cu  addmul_1.cuh  bdiv_dbm1c.cu  bdiv_q.cu  bdiv_q_1.cu  bdiv_qr.cu  binvert.cu  broot.cu  brootinv.cu  bsqrt.cu  bsqrt.cuh.TODO  bsqrtinv.cu  bsqrtinv.cuh.TODO  cmp.cu  cnd_add_n.cu  cnd_add_n.cuh  cnd_sub_n.cu  cnd_swap.cu  cnd_swap.cuh  com.cu  comb_tables.cu  compute_powtab.cu  copyd.cu  copyd.cuh  copyi.cu  copyi.cuh  dcpi1_bdiv_q.cu  dcpi1_bdiv_qr.cu  dcpi1_div_q.cu  dcpi1_div_qr.cu  dcpi1_divappr_q.cu  (+167 more)
src/rand/: randmt.cu  randmt.cuh
tests/devenv/: main.cpp
